[project]
name = "regression-prediction-prix-immobilier"
version = "0.1.0"
description = ""
authors = [
    {name = "Laurent Bihin",email = "laurent.bihin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.30.1,<7.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.eda.dependencies]
pandas = "^2.3.2"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
scipy = "^1.16.1"

